--- a/detail.html
+++ b/detail.html
@@ -325,7 +325,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="card_image_left">
@@ -337,7 +351,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="card_image_left">
@@ -349,7 +377,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="card_image_left">
@@ -361,7 +403,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <a href="#" class="bg_gray font_grey">Vorige</a>
@@ -388,7 +444,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="card_image_left">
@@ -400,7 +470,21 @@
                                                         <p><strong>Tuiyn-Topperservice</strong></p>
                                                         <p>Nog niet beschikbaar</p>
                                                         <a href="#" class="bg_green font_white">Toevoegen</a>
-                                                        <a href="#" class="details_link">Details</a>
+                                                    </div>
+                                                    <!-- add new element -->
+                                                    <div class="the_detail_description">
+                                                        <div class="item_detail">
+                                                            <button class="slide_the_list ">Details</button>
+                                                            <div class="check_list">
+                                                                <p>Breng een vleugje charme en functionaliteit naar uw
+                                                                    tuin met Blokhut Anton, een veelzijdige en
+                                                                    stijlvolle toevoeging voor elke buitenruimte. Deze
+                                                                    hoogwaardige blokhut is ontworpen met oog voor
+                                                                    detail en vakmanschap, en biedt een ideale oplossing
+                                                                    voor extra opslagruimte, een gezellige tuinlounge of
+                                                                    zelfs een thuiskantoor.</p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="card_image_left">
